added gap in the choose section

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 <div class="md:ml-16 lg:ml-4">
 <!-- right content start -->
  <!-- first content start -->
- <div class="flex "> 
+ <div class="flex lg:gap-5 "> 
   
   <div class="pl-4">
     <h2 class="text-xl font-extrabold lato-font">Integrated Supplier</h2>
@@ -408,7 +408,7 @@
   </div>
   <!-- first content end -->
   
-  <div class="flex  mt-6 lg:mt-1">
+  <div class="flex lg:gap-5 mt-6 lg:mt-1">
   <!-- second content start -->
   
   
@@ -425,7 +425,7 @@
   </div>
   
   
-  <div class="flex lg:gap-6 mt-6 lg:mt-1">
+  <div class="flex lg:gap-5 mt-6 lg:mt-1">
   <!-- thied content start -->
   
   <div class="pl-4 ">
